--- a/index.html
+++ b/index.html
@@ -11,9 +11,29 @@
 
     <!--Parte iniziale-->
     <header id="pattern">
+
         <img src="img/logo.svg" alt="logo booleaner" id="logo">
          
     </header>
+
+    <!--inizio articolo-->
+    <main>
+
+        <!--titolo articolo-->
+        <h1>
+            Internet deve essere al servizio del &quot;bene pubblico&quot; &colon; il manifesto di Tim Berners-Lee 
+        </h1>
+
+        <h6 id="sottotitolo">
+            Scritto da <a href="">The Booleaner</a> <br>
+            il 13&sol;09&sol;2021
+        </h6>
+
+        <img src="img/tim-1.jpg" alt="">
+        <img src="img/tim-2.jpg" alt="">
+
+
+    </main>
     
 </body>
 </html>
