--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <main>
 
         <!--titolo articolo-->
-        <h1>
-            Internet deve essere al servizio del &quot;bene pubblico&quot; &colon; il manifesto di Tim Berners-Lee 
+        <h1 id="titolo">
+            Internet deve essere al servizio del &quot;bene pubblico&quot; &colon; il <br>
+             manifesto di Tim Berners-Lee 
         </h1>
 
         <h6 id="sottotitolo">
@@ -29,9 +30,43 @@
             il 13&sol;09&sol;2021
         </h6>
 
+        <!--foto e descrizioni-->
         <img src="img/tim-1.jpg" alt="">
         <img src="img/tim-2.jpg" alt="">
+        <h6>
+            1st Photo&colon; Jhons S. and James L. KnightFoundation, by Scott Henrichsen <br>
+            2nd Photo&colon; Wikimedia, by Paul Clarke
+        </h6>
 
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae numquam ea porro dolore modi minima! Fugiat quis a beatae veniam eligendi inventore iste pariatur tenetur minus consequatur dolore, at tempora. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, quae consequatur! Tempora modi facere consequatur fugit dolore blanditiis! Dolor nihil similique tempore animi perspiciatis dolores repellendus molestias doloremque autem officiis!
+        </p>
+
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi repellat obcaecati delectus distinctio officiis in, aperiam inventore hic neque, ex aliquid molestias vero fuga iusto rerum architecto sunt nostrum! Est?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis provident placeat libero quaerat veritatis quos voluptatum aliquid natus ratione iure alias tempore quis, repellendus et recusandae velit accusantium fugiat reiciendis!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius unde quis suscipit accusamus possimus obcaecati dolor maiores saepe blanditiis nihil, vero reprehenderit beatae voluptatibus debitis deleniti sit itaque ad voluptatem?</li>
+        </ul>
+
+        <!--tabella-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+                
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid obcaecati ex amet accusantium doloremque, ullam pariatur quis cupiditate qui provident, voluptates at cum nesciunt delectus voluptatem id explicabo quaerat atque?</td>
+                </tr>
+            </tbody>
+        </table>
 
     </main>
     
